--- a/Polara/Polara/Storyboards/Base.lproj/Main.storyboard
+++ b/Polara/Polara/Storyboards/Base.lproj/Main.storyboard
@@ -2,7 +2,6 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BGU-ek-yKJ">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -55,7 +54,7 @@
                         <viewLayoutGuide key="safeArea" id="EY5-G5-W0r"/>
                     </view>
                     <connections>
-                        <segue destination="R2a-b2-1z4" kind="modal" identifier="toLoginVC" id="sdK-Lt-FBa"/>
+                        <segue destination="R2a-b2-1z4" kind="show" identifier="toLoginVC" id="sdK-Lt-FBa"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zWk-4Y-Udf" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -764,13 +763,13 @@
         <!--Login View Controller-->
         <scene sceneID="tra-ny-G0B">
             <objects>
-                <viewController storyboardIdentifier="loginScreen" id="R2a-b2-1z4" customClass="LoginViewController" customModule="Polara" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="loginScreen" modalPresentationStyle="fullScreen" id="R2a-b2-1z4" customClass="LoginViewController" customModule="Polara" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="QOs-By-E6K">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AqU-at-xee">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4mI-wz-Rg1">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="800"/>
@@ -865,7 +864,7 @@
                                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         </state>
                                                         <connections>
-                                                            <segue destination="vbX-Jr-Nmm" kind="modal" id="MSO-uq-nLN"/>
+                                                            <segue destination="vbX-Jr-Nmm" kind="presentation" id="MSO-uq-nLN"/>
                                                         </connections>
                                                     </button>
                                                 </subviews>
@@ -1089,6 +1088,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Wd-hM-cz8"/>
                     </view>
+                    <navigationItem key="navigationItem" id="vtc-lz-Qa5"/>
                     <connections>
                         <outlet property="activityIndicator" destination="Zzx-Pl-rrH" id="paz-aa-fzr"/>
                         <outlet property="bottomConstraint" destination="wKz-SX-MA1" id="If8-kk-NNG"/>
